fixed first text alignment

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
 
 .firsttext {
     min-height: 300px;
-    min-width: 500px;
+    max-width: 500px;
     margin: 20px;
     display: flex;
     justify-content: flex-start;
@@ -117,6 +117,7 @@ a {
     display: flex;
     flex: 1;
     min-height: 300px;
+    min-width: 800px; 
     gap: 70px;
     justify-content: center;
     align-items: center;
@@ -165,7 +166,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    
     min-height: 200px;
     min-width: 1100px;
     background-color: #3882f6;
